feat: coming soon

--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
-<!DOCTYPE html><html lang="en"><head>
-  <meta charset="utf-8">
-  <title>Portfolio</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
-<body>
-  <app-root></app-root>
-<script src="runtime.1c85ea6003a0fcdb.js" type="module"></script><script src="polyfills.9943b92c9a60f682.js" type="module"></script><script src="main.dca58d3e07313e8d.js" type="module"></script>
+<!DOCTYPE html>
+<html lang="en">
 
-</body></html>
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Anes Smajić</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
+</head>
+
+<body>
+
+  <header id="header" class="d-flex align-items-center">
+    <div class="container d-flex flex-column align-items-center">
+
+      <h1>Coming Soon</h1>
+      <h2>I'm working hard to create my portfolio website and I'll ready to launch after</h2>
+      <div class="countdown d-flex justify-content-center" data-count="2023/4/1">
+        <div>
+          <h3>%d</h3>
+          <h4>Days</h4>
+        </div>
+        <div>
+          <h3>%h</h3>
+          <h4>Hours</h4>
+        </div>
+        <div>
+          <h3>%m</h3>
+          <h4>Minutes</h4>
+        </div>
+        <div>
+          <h3>%s</h3>
+          <h4>Seconds</h4>
+        </div>
+      </div>
+
+      <div class="social-links text-center">
+		<a href="https://www.linkedin.com/in/anes-smajic" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.facebook.com/anes.smajic.5" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/anes_smajic95" class="instagram"><i class="bi bi-instagram"></i></a>
+      </div>
+
+    </div>
+  </header><!-- End #header -->
+
+
+  <script src="assets/js/main.js"></script>
+
+</body>
+
+</html>
