feat: add responsivnes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+
+  <title>Anes Smajić - Portfolio</title>
+  <meta name="description" content="Portfolio page">
+
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
@@ -13,6 +16,6 @@
 
 <body>
   <app-root></app-root>
-<script src="runtime.1c85ea6003a0fcdb.js" type="module"></script><script src="polyfills.a15bdabebaa72a43.js" type="module"></script><script src="main.0d04079f3554a1bd.js" type="module"></script></body>
+<script src="runtime.1c85ea6003a0fcdb.js" type="module"></script><script src="polyfills.a15bdabebaa72a43.js" type="module"></script><script src="main.0628d736b9c22737.js" type="module"></script></body>
 
 </html>
