feat: add email service

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-6EAL64PA.js" type="module"></script><script src="main-SJJ7HWWL.js" type="module"></script></body>
+<script src="polyfills-6EAL64PA.js" type="module"></script><script src="main-QYD7EPTB.js" type="module"></script></body>
 
 </html>
